--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,13 @@
 {
   "extends": [
-    "@rocketseat/eslint-config/next",
+    "eslint:recommended",
+    "next",
+    "prettier",
     "next/core-web-vitals",
     "plugin:storybook/recommended"
-  ]
+  ],
+  "plugins": ["prettier"],
+  "rules": {
+    "prettier/prettier": "error"
+  }
 }
