--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,12 @@
   ],
   "plugins": ["prettier"],
   "rules": {
-    "prettier/prettier": "error"
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
+      }
+    ],
+    "@next/next/no-img-element": "off"
   }
 }
