--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Install dependencies
         run: yarn
 
-      - name: Run liny
+      - name: Run lint
         run: yarn lint
 
       - name: Run format check
