--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,css,html}'",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
+    "generate:component": "yarn plop --plopfile generators/component-plopfile.js",
+    "generate:template": "yarn plop --plopfile generators/page-plopfile.js",
     "prepare": "husky"
   },
   "dependencies": {
@@ -58,6 +60,7 @@
     "eslint-plugin-storybook": "^0.6.15",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
+    "plop": "^4.0.1",
     "postcss": "^8",
     "prettier": "^3.2.5",
     "prisma": "^5.9.1",
