--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "@next-auth/prisma-adapter": "^0.4.4-canary.81",
     "@phosphor-icons/react": "^2.0.15",
     "@prisma/client": "^5.9.1",
+    "@radix-ui/react-navigation-menu": "^1.1.4",
+    "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-slot": "^1.0.2",
     "@tailwindcss/forms": "^0.5.7",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
