--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-hook-form": "^7.50.1",
     "react-number-format": "^5.3.1",
     "react-pdf": "^7.7.0",
+    "react-responsive": "^9.0.2",
     "react-toastify": "^10.0.4",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
