--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,7 @@
       }
     ],
     "@next/next/no-img-element": "off",
-    "no-undef": "off"
+    "no-undef": "off",
+    "typescript-eslint/no-explicit-any": "off"
   }
 }
